--- a/01-fonts.html
+++ b/01-fonts.html
@@ -14,11 +14,15 @@
             body {
                 font-family: 'Sixtyfour', sans-serif;
             }
+            .euskara {
+                font-family: 'vasca';
+            }
     </style>
 </head>
 <body>
     <h1>Ejemplos Fonts</h1>
-    <p>Las fuente en el diseño web no solo cumple una función práctica en términos de legibilidad y accesibilidad, sino que también desempeña un papel crucial en la estética, la identidad de la marca y la experiencia general del usuario. Es un componente esencial para el éxito de un diseño web efectivo.
+    <!-- se ve en los equipos que hayan instalado el fichero de fuentes -->
+    <p class="euskara">Las fuente en el diseño web no solo cumple una función práctica en términos de legibilidad y accesibilidad, sino que también desempeña un papel crucial en la estética, la identidad de la marca y la experiencia general del usuario. Es un componente esencial para el éxito de un diseño web efectivo.
     </p>
     <a href="https://docs.google.com/presentation/d/1OFtKHyxyZJVulR0SMkdugUt3MbB-4dktjLCDAdkJ1P0/edit?usp=sharing" target="_blank">Presentación de fuentes</a>
     
