--- a/02-fonts_personalizadas.html
+++ b/02-fonts_personalizadas.html
@@ -12,6 +12,12 @@
             font-family: 'letraPunk'; /* Nombre que asignas a tu fuente */
             src: url('fonts/Mustasurma.ttf') format('OpenType'); /* Ruta del fichero de fuentes*/
         }
+        @font-face {
+            font-family: 'Euskara'; /* Nombre que asignas a tu fuente */
+            src: url('fonts/Vascan.TTF') format('TrueType'); /* Ruta del fichero de fuentes*/
+        }
+
+
 
         h1 {
             font-family: 'Honk', system-ui;
@@ -22,6 +28,9 @@
         .punk {
             font-family: 'letraPunk', Courier, monospace;
         }
+        .euskara {
+            font-family: 'Euskara';
+        }
     </style>
 </head>
 <body>
@@ -29,6 +38,7 @@
     <p>Las fuente en el diseño web no solo cumple una función práctica en términos de legibilidad y accesibilidad, sino que también desempeña un papel crucial en la estética, la identidad de la marca y la experiencia general del usuario. Es un componente esencial para el éxito de un diseño web efectivo.
     </p>
     <p class="punk">Ahora vamos a usar fuentes en el proyecto (carpeta FONTS)</p>
+    <p class="euskara">Gure Txokoa</p>
     <a href="https://docs.google.com/presentation/d/1OFtKHyxyZJVulR0SMkdugUt3MbB-4dktjLCDAdkJ1P0/edit?usp=sharing" target="_blank">Presentación de fuentes</a>
     
 </body>
